--- a/scss/pages/_news-stories.scss
+++ b/scss/pages/_news-stories.scss
@@ -20,6 +20,8 @@ UNIVERSAL / STYLES FOR DESKTOP [1250px and up]
 
 		.latest_post_title  {
 			padding-top:10px;
+			font-weight: 600;
+			font-size: 12px;
 		}
 
 		.post_infos a {
